src/components/styles/common.scss
@keyframes pipelines-console-plugin__spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.pipelines-console-plugin__spin {
  animation: pipelines-console-plugin__spin 2s infinite linear;

  @media (prefers-reduced-motion: reduce) {
    animation: none;
  }
}

.cp-text-align-center {
  text-align: center !important;
}

.pipelines-console-plugin__page-section-width {
  @media (min-width: 769px) {
    max-width: 650px;
  }

  @media (min-width: 992px) {
    min-width: 650px;
  }

  @media (min-width: 1200px) {
    max-width: 50%;
  }
}

